--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -9,7 +9,7 @@
 
 <p class="sidebar"><a class="sidebar" href="{{ "research/#WorkingPapers" | relURL }}">Working Papers</a></p>
 <p class="sidebar"><a class="sidebar" href="{{ "research/#Publications" | relURL }}">Publications</a></p>
-<p class="sidebar"><a class="sidebar" href="http://economics.mit.edu/faculty/sjaeger">MIT Page</a></p>
+<p class="sidebar"><a class="sidebar" href="http://economics.mit.edu/faculty/fschilb">MIT Page</a></p>
 
 <p class="sidebar">
 <img src="{{ "/icons/email_icon.png" | relURL }}" class="octicons">
